Modifications to the october budget.

--- a/reporting/budget-monthly/2021-10-01.md
+++ b/reporting/budget-monthly/2021-10-01.md
@@ -41,12 +41,14 @@ This is a summary when employees or contractors actually receive their MKR grant
 
 | Vesting Date | Vesting Transfer Date     |        MKR Amount |
 | ------------ | ------------------------- | -----------------:|
-| 30 Sep 2022  | 01 Oct 2022               |       1052.63 MKR |
-| 31 Mar 2022  | 01 Apr 2023               |       526.315 MKR |
-| 30 Sep 2022  | 01 Oct 2023               |       526.315 MKR |
-| 31 Mar 2022  | 01 Apr 2024               |       526.315 MKR |
-| 30 Sep 2022  | 01 Oct 2024               |       526.315 MKR |
-|              | **Total**                 |  **3,157.89 MKR** |
+| 30 Sep 2022  | 01 Oct 2022               |        966.49 MKR |
+| 31 Mar 2022  | 01 Apr 2023               |        483.24 MKR |
+| 30 Sep 2022  | 01 Oct 2023               |        483.24 MKR |
+| 31 Mar 2022  | 01 Apr 2024               |        483.24 MKR |
+| 30 Sep 2022  | 01 Oct 2024               |        483.24 MKR |
+|              | **Total**                 |  **2,899.46 MKR** |
+
+At the current (2021-08-11) MKR price and if CES was onboarding a full team, the MKR Incentive Total would be **`2,292.46`**. An additional **`607`** MKR are allocated for Manual Repricing or if the trailing six month average drops below today's MKR price. The actual MKR issued will fall in a range between **`2,292.46`** and **`2,899.46`** MKR.
 
 MKR will be transferred from the Auditor's multi-sig Wallet into the CES Operational multi-sig Wallet no later than Core Unit Monthly Budgeting Cycle before the month the MKR actually vests. For example, if a Vesting Transfer Date is 01 Oct 2022, the MKR will be transferred into the Operational Wallet no later than August 2022 Core Unit Monthly Budgeting Cycle. Once DssVest is ratified and implemented, CES will investigate the use of automated MKR incentive vesting.
 
